# MiGroBox

./: CMakeLists.txt  Makefile  sdkconfig  sdkconfig 10  sdkconfig 12  sdkconfig 13  sdkconfig 14  sdkconfig 15  sdkconfig 16  sdkconfig 3  sdkconfig 6  sdkconfig 7  sdkconfig 9  sdkconfig.old  sdkconfig_custom_tz  sdkconfig_custom_tz.old  sdkconfig_ellipsis  sdkconfig_ellipsis 3  sdkconfig_ellipsis.old  sdkconfig_no_tz  sdkconfig_test  sdkconfig_test.old
MiGroBox/: db.sqlite3  manage.py
MiGroBox/MiGroBox/: asgi.py  settings.py  urls.py  wsgi.py
MiGroBox/interface/: forms.py  models.py  views.py
MiGroBox/interface/migrations/: 0001_initial.py
MiGroBox/interface/static/interface/: script.js  style.css
MiGroBox/interface/templates/interface/: interface.html  interfaceold.html
components/: CMakeLists.txt
components/include/: endstop.h  fan_pwm.h  stepper.h
components/src/: endstop.c  fan_pwm.c  stepper.c  timer.c
components/utils/include/: real_time.h
components/utils/src/: real_time.c
main/: Kconfig.projbuild  component.mk  endstops.c  main.c  main_old.c  stepper.c  stepper.h
